--- a/apple-pie/styles/style.css
+++ b/apple-pie/styles/style.css
@@ -5,11 +5,21 @@ html {
   font-size: 16px;
 }
 
-*, *:before, *:after {
+*,
+*:before,
+*:after {
   box-sizing: inherit;
 }
 
-body, h1, h2, h3, h4, h5, h6, p, ol, ul {
+body,
+h1. h2,
+h3,
+h4,
+h5,
+h6,
+p,
+ol,
+ul {
   margin: 0;
   padding: 0;
   font-weight: lighter;
@@ -18,7 +28,41 @@ body, h1, h2, h3, h4, h5, h6, p, ol, ul {
 /*  Set the font */
 body {
   font-family: "Helvetica", sans-serif;
+  margin: 0%;
 }
 
 /* STYLES */
 /* Write your CSS below */
+.apple-pie {
+  background-image: url("../images/apple-pie.jpg");
+  height: 1024px;
+  display: grid;
+  place-content: center;
+}
+
+.apple-pie-title {
+  color: aliceblue;
+  font-size: 140px;
+  font-weight: 500;
+
+}
+
+.page-content {
+  padding: 100px;
+}
+
+.apple-explanation {
+  font-size: 28px;
+  font-weight: 300;
+}
+
+img {
+
+  display: block;
+  margin: auto;
+}
+
+li {
+  font-size: 24px;
+  font-weight: lighter;
+}
